# booty

./: .booty.yml  .env.example  README.md  booty.conf  deploy.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  verify-main.yml  verify-pr.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-MILESTONE-AUDIT.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  (+8 more)
deploy/: booty.conf  booty.service
docs/: agents-github-state-diagram.md  architect.md  builder-planner-integration-audit.md  capabilities-summary.md  check-results.md  deploy-setup.md  dogfood.md  github-app-setup.md  memory.md  planner.md  release-governor.md  reviewer.md  routing.md  security-agent.md
scripts/: create-dogfood-labels.sh  merge-env.py
tests/: __init__.py  conftest.py  test_architect_cache.py  test_architect_config.py  test_architect_output.py  test_architect_rewrite.py  test_architect_validation.py  test_architect_worker.py  test_booty_config.py  test_detail_pages.py  test_generator_incremental.py  test_github_checks.py  test_github_comments.py  test_internal_endpoints.py  test_main_error_handling.py  test_main_verify.py  test_memory_adapters.py  test_memory_api.py  test_memory_cli.py  test_memory_config.py  test_memory_lookup.py  test_memory_store.py  test_memory_surfacing.py  test_planner_cache.py  test_planner_config.py  test_planner_generation.py  test_planner_input.py  test_planner_output.py  test_planner_risk.py  test_planner_schema.py  test_release_governor_config.py  test_release_governor_decision.py  test_release_governor_handler.py  test_release_governor_override.py  test_release_governor_risk.py  test_release_governor_store.py  test_reviewer_config.py  test_reviewer_engine.py  test_reviewer_runner.py  test_security_audit.py  (+9 more)
(+517 files in other folders)
